--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>An overview of Shabbhirism</h1>
     </header>
 
-    <div class="main">
+    <div class="main" id="main">
         <p id="one">Hello, today I am going to talk about our lord and saviour Shabbhir.</p>
 
         <img src="Shabbhir.png" alt="A photo of Shabbhir" id="shabbhir">
@@ -31,7 +31,7 @@
         <p>
         <strong><cite>"Shabu wala aaya, Ghar se Shabu Nikal." </cite></strong>
         </p><br><br>
-        
+
         <p>Many of the followers of shabbhirism practice and recite these hymns everyday.</p><br>
 
         <p>Some Benefits of following Shabbhirism is given below:</p>
@@ -47,7 +47,7 @@
         </ul>
 
         <p>So, What are waiting for? Become the follower of Shabbhirism by pressing the button below:</p><br>
-        <div class="other"><button id="button">Become a follower</button></div><br><br>
+        <div class="other" id="bitch"><button id="button">Become a follower</button></div><br><br>
     </div>
 
     <footer>
