--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li>none</li>
         </ul>
 
-        <p>So, What are waiting for? Become the follower of Shabbhirism by pressing the button below:</p><br>
+        <p>So, What are you waiting for? Become the follower of Shabbhirism by pressing the button below:</p><br>
         <div class="other" id="bitch"><button id="button">Become a follower</button></div><br><br>
     </div>
 
